jackson/api-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: spring-boot-api-deployment
  annotations:
    flux.weave.works/automated: 'true'
spec:
  selector:
    matchLabels:
      app: spring-boot-api
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: spring-boot-api
      annotations:
        prometheus.io/path: "/api/actuator/prometheus"
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: jackson-api
        image: mtarng/jackson-api:v1.1-peoplehobby
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: api
        - containerPort: 5005     # Optional port for remote debugging.
          name: jvm-debug
